--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Spree",
+  "name": "spree",
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
