--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,18 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "^5.1.3"
+    "mongoose": "^5.1.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "drop": "node models/drop.js",
+    "seed": "node models/seeds.js",
+    "reset": "npm run drop && npm run seed"
   }
 }
